<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/relativeLayout">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_name"
            app:titleTextColor="#FFFFFF" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/et_phoneno"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="483dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/eg_number"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="570dp"
        android:ems="10"
        android:hint="@string/eg_mickey"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="16sp"
        tools:ignore="Autofill,MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="157dp" />

    <TextView
        android:id="@+id/name_tx"
        android:layout_width="152dp"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-21dp"
        android:layout_marginBottom="539dp"
        android:layout_toStartOf="@+id/et_name"
        android:text="@string/name"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/rollno_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="488dp"
        android:layout_toStartOf="@+id/et_phoneno"
        android:text="@string/phone_no"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <Button
        android:id="@+id/addData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="383dp"
        android:text="@string/create"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="238dp" />

    <Button
        android:id="@+id/updateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="175dp"
        android:text="@string/update"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="403dp" />

    <Button
        android:id="@+id/deleteData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="71dp"
        android:text="@string/delete"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="325dp" />

    <Button
        android:id="@+id/viewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="275dp"
        android:text="@string/read"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="486dp" />

</RelativeLayout>